--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
+  "theme_color": "#4285f4",
   "description": "GPS 定位打卡系統",
   "icons": [
     {
