--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,14 @@
-
 {
   "name": "GPS 打卡系統",
-  "short_name": "打卡",
-  "start_url": "index.html",
+  "short_name": "GPS打卡",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4285f4",
-  "description": "GPS 定位打卡系統",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "theme_color": "#000000",
+  "description": "GPS 打卡與工時計算",
+  "icons": [{
+    "src": "icon.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }]
 }
